--- a/app/views/books/book_row.js.erb
+++ b/app/views/books/book_row.js.erb
@@ -1,1 +1,1 @@
-$("#book-index-ajax-<%= @book.id %>").html("<%= j(render 'books/book_row', {book: @book}) %>")
+$("#book-index-ajax-<%= @book.id %>").html("<%= j(render 'books/book_row', {book: @book,call: @call}) %>")
