--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -25,9 +25,9 @@
 
 			<tbody>
 				<% @books.each do |book| %>
-					<tr id="book-index-ajax-<%= book.id %>">
-						<%= render partial: "books/book_row", locals: {book: book} %>
-					</tr>
+						<tr id="book-index-ajax-<%= book.id %>">
+							<%= render partial: "books/book_row", locals: {book: book,call: @call} %>
+						</tr>
 				<% end %>
 			</tbody>
 
