--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,48 +15,22 @@
 
 		<table class="table">
 			<% if @book.user_id == current_user.id%>
-			<tr>
-				<td>
-					<%= link_to (@book.user) do %>
-					<%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %><br>
-					<%= @user.name %>
-					<% end %>
-				</td>
-				<td><%= link_to @book.title, @book %></td>
-				<td><%= @book.body %></td>
-				<% if favorited?(current_user.id, @book.id) %> <!--favoriteされてる-->
-				<td><%= link_to favorited_count(@book.id), favorite_path(id: @book.id, user_id: current_user.id), method: :delete,class: "glyphicon glyphicon-heart" %></td>
-				<% else %><!--favoriteされてない-->
-				<td><%= link_to favorited_count(@book.id), favorite_path(@book.id), method: :post, class: "glyphicon glyphicon-heart-empty" %></td>
-				<% end %>
 
-				<td>コメント数：<%= book_comment_count(@book.id) %></td>
-				<td><%= link_to "Edit",edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
-				<td><%= link_to "Destroy",@book, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
-			</tr>
 
+			<!--favoriteすると、editとdestroyは tr内で置き換わって消える-->
+				
+						<tr id="book-index-ajax-<%= @book.id %>">
+							<%= render partial: "books/book_row", locals: {book: @book,call: @call} %>
+						</tr>
+					
+
+			<!--他人のユーザーshow-->
 			<% else %>
-			<tr>
-				<td>
-					<%= link_to (@book.user) do %>
-					<%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %><br>
-					<%= @user.name %>
-					<% end %>
-				</td>
-				<td><%= link_to @book.title, @book %></td>
-				<td><%= @book.body %></td>
-				<% if favorited?(current_user.id, @book.id) %> <!--favoriteされてる-->
-				<td><%= link_to favorited_count(@book.id), favorite_path(@book.id), method: :delete,class: "glyphicon glyphicon-heart" %></td>
-				<% else %><!--favoriteされてない-->
-				<td><%= link_to favorited_count(@book.id), favorite_path(@book.id), method: :post, class: "glyphicon glyphicon-heart-empty" %></td>
-				<% end %>
-
-				<td>コメント数：<%= book_comment_count(@book.id) %></td>
-				<td></td>
-				<td></td>
-			</tr>
-
+					<tr id="book-index-ajax-<%= @book.id %>">
+						<%= render partial: "books/book_row", locals: {book: @book, call: @call} %>
+					</tr>
 			<% end %>
+
 		</table>
 
 		<!--Ajaxでコメント一覧呼び出し-->
