--- a/app/views/search/search_book.html.erb
+++ b/app/views/search/search_book.html.erb
@@ -17,24 +17,9 @@
 
 			<tbody>
 				<% @books.each do |book| %>
-				<tr>
-					<td>
-						<%= link_to(book.user) do %>
-						<%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %>
-						<% end %>
-					</td>
-					<td><%= link_to book.title, book, class: "book_#{book.id}" %></td>
-
-					<td><%= book.body %></td>
-
-					<% if favorited?(current_user.id, book.id) %> <!--favoriteされてる-->
-						<td><%= link_to favorited_count(book.id), favorite_path(id: book.id,user_id: current_user.id), method: :delete,class: "glyphicon glyphicon-heart" %></td>
-					<% else %><!--favoriteされてない-->
-						<td><%= link_to favorited_count(book.id), favorite_path(book.id), method: :post, class: "glyphicon glyphicon-heart-empty" %></td>
-					<% end %>
-
-					<td>コメント数：<%= book_comment_count(book.id) %></td>
-				</tr>
+					<tr id="book-index-ajax-<%= book.id %>">
+						<%= render partial: "books/book_row", locals: {book: book,call: nil} %>
+					</tr>
 				<% end %>
 			</tbody>
 		</table>
